completed beef page and cleaned up chicken and index

--- a/chicken.html
+++ b/chicken.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <title>Bourbon Chicken</title>
+</head>
 <body>
     <h1>Bourbon Chicken</h1>
     <img src="https://www.allrecipes.com/thmb/cRavuFtFBUGbwZwsoS4PE0lgW7U=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9025-bourbon-chicken-ddmfs-3x4-1291-a7891c2a33e04b7dbf1f1112d2fb74d0.jpg" alt="photo of finished bourbon chicken in a bowl">
@@ -28,11 +29,13 @@
 
     <h5>Steps:</h5>
     <ol>
-        <li></li>
-
-
-
-
+        <li>Toss chicken with 1tbsp cornstarch into a medium bowl and mix</li>
+        <li>Heat 1bsp oil in a 12-inch skillet over medium-high heat; add chicken. Cook and stir until browned; transfer to a plate using a slotted spoon.</li>
+        <li>Heat  remaining 1tbsp oil in same skillet. Add onion, garlic, and ginger; cook and stir until softened and fragrant, 1 to 3 minutes.</li>
+        <li>Stir remaining 1tbsp cornstarch, soy sauce, broth, bourbon, brown sugar, vinegar, and crushed red pepper together in a small bowl.</li>
+        <li>Add sauce mixture to skillet; cook and stir until thickened and bubbly.</li>
+        <li>Return chicken to skillet. Cook and stir until coated in sauce and heated through, about 2 minutes.</li>
+        <li>Serve over rice. Top with green onions.</li>
     </ol>
 
 
