--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Odin Recipe</title>
 </head>
 <body>
-    <a href="chicken.html">Bourbon Chicken</a>
+    <h1>Bussin' Recipe Ideas</h1>
+    <img src="https://hips.hearstapps.com/hmg-prod/images/promotional-portrait-of-american-actor-and-comedian-kevin-news-photo-1695761653.jpg?crop=1xw:0.6065xh;center,top&resize=1200:*" height="300" width="400" alt="Smirking Kevin James">
+
+    <p><a href="chicken.html">Bourbon Chicken</a></p>
+    <a href="beef.html">Beef Stir Fry</a>
 
 
     
