--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     
     <title>Odin Recipe</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bussin' Recipe Ideas</h1>
