added random CSS elements

--- a/chicken.html
+++ b/chicken.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bourbon Chicken</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bourbon Chicken</h1>
