--- a/beef.html
+++ b/beef.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Beef Stir-Fry</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Quick Beef Stir-Fry</h1>
